--- a/language/en-GB/en-GB.plg_fields_radicalhtmlfield.ini
+++ b/language/en-GB/en-GB.plg_fields_radicalhtmlfield.ini
@@ -5,5 +5,5 @@ PLG_RADICAL_HTML_FIELD_PARAMS_SEEVARS_LABEL="Available variables for insertion"
 PLG_RADICAL_HTML_FIELD_PARAMS_HTML_LABEL="Input Html code"
 PLG_RADICAL_HTML_FIELD_PARAMS_BUTTONS_LABEL="Buttons for the editor"
 
-PLG_RADICAL_HTML_FIELD_INPUT_DESC_LABEL="This is an HTML field. You can change the template in the field settings:"
-PLG_RADICAL_HTML_FIELD_INPUT_SETTING_LABEL="change settings"
+PLG_RADICAL_HTML_FIELD_INPUT_INCLUDE_LABEL="Inculde"
+PLG_RADICAL_HTML_FIELD_INPUT_DISABLED_LABEL="Disabled"
