--- a/language/ru-RU/ru-RU.plg_fields_radicalhtmlfield.ini
+++ b/language/ru-RU/ru-RU.plg_fields_radicalhtmlfield.ini
@@ -5,5 +5,5 @@ PLG_RADICAL_HTML_FIELD_PARAMS_SEEVARS_LABEL="Доступные переменн
 PLG_RADICAL_HTML_FIELD_PARAMS_HTML_LABEL="Введите Html код"
 PLG_RADICAL_HTML_FIELD_PARAMS_BUTTONS_LABEL="Кнопки для редактора"
 
-PLG_RADICAL_HTML_FIELD_INPUT_DESC_LABEL="Это HTML поле. Изменить шаблон вы можете в настройках поля:"
-PLG_RADICAL_HTML_FIELD_INPUT_SETTING_LABEL="изменить настройки"
+PLG_RADICAL_HTML_FIELD_INPUT_INCLUDE_LABEL="Включить"
+PLG_RADICAL_HTML_FIELD_INPUT_DISABLED_LABEL="Отключить"
