--- a/language/en-GB/en-GB.plg_fields_radicalhtmlfield.sys.ini
+++ b/language/en-GB/en-GB.plg_fields_radicalhtmlfield.sys.ini
@@ -1,3 +1,3 @@
 PLG_RADICALHTMLFIELD="Radical Html Field"
-PLG_RADICALHTMLFIELD_XML_DESCRIPTION="Radical Html Field Plugin"
+PLG_RADICALHTMLFIELD_XML_DESCRIPTION="Radical Html Field - The field for Joomla! realizing widgets"
 PLG_RADICAL_HTML_FIELD_WRONG_PHP="Need a PHP version of at least 5.6"
